--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.6.1",
-    "next": "12.3.1",
+    "next": "^13.1.1",
     "next-sanity": "^3.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-simple-typewriter": "^4.0.5",
     "react-social-icons": "^5.15.0",
@@ -28,7 +28,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.1.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
